public/css/guestbook.css
body {
  margin: 0;
  font-family: 'Baloo 2', cursive;
  padding-bottom: 50px;
}

#paddingstuff {
  padding-left: 20px;
  padding-right: 25px;
  padding-top: 5px;
  padding-bottom: 20px;
  background-color:#fffef8;
}

/* TEXT */

#fancy {
  font-family: 'Fasthand', cursive;
  padding-right: 5px;
  font-size: 50px;
  color: #416050;
}

#fancy:hover {
  font-weight: 550;
  color: #be892a;
  transition: 1s;
}

#title {
  padding-top: 40px;
  padding-bottom: 30px;
  font-size: 25px;
  font-family: 'Franklin Gothic Medium';
}

h1, h2, h3, p {
  color: #40413d
}

h1, h2, h3 {
  text-align: center;
}

h1 {
  font-family: 'Baloo 2', cursive;
}
h2 {
  padding: 20px;
}

#alt-text {
  text-align: center;
}

p {
  font-size: 12px;
}

/* IMAGES */

img {
  margin-right: 15px;
  width: 8cm;
  height: 8.5cm;
}

/* NAVBAR */

.topnav {
  overflow: hidden;
  background-color: #333;

}

.topnav a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 12px;
}

.topnav a:hover {
  background-color: #f2f2f2;
  color: #40413d;
}

.topnav a.active {
  background-color: #d6a95a;
  color: white;
}

.centered-item a {
  float: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* THE TABLE */

#tablediv {
  table-layout: auto;
  margin-left: auto;
  margin-right: auto;
  width: 70%;
  overflow: auto;
}
@media (max-width: 700px) {
  #tablediv {
      max-width: 100%;
  }
}


/* table {
  table-layout: auto;
  width: 100%;
  margin: auto;
  height: 200px;
  margin-bottom: 80px;
} */

thead th {
  /* determining a different font for the titles */
  font-family: 'Franklin Gothic Medium';
  background-color: #d6a95a;
}

th, td {
  padding: 15px;
  text-align: center;
}

table, tr, td {
  border: 1px inset #40413d;
  border-collapse: collapse;
  border-spacing: 0;
}

#tr {
  font-size: 15px;
}

/* the 'titles' */
th {
  letter-spacing: 3px;
  font-size: 10px;
}

/* the content */
#tbody {
  font-size: 10px;
}
td {
  letter-spacing: 1px;
}

/* zebra striping */
tbody tr:nth-child(odd) {
  background-color: #f9f5ea;
}

tbody tr:nth-child(even) {
  background-color: #fffef7;
}



/* FOR THE NEW MESSAGE PAGE */
#newentrycontainer {
  /*NOTE TO SELF: no max. height bc there's also*/
  /*no max. number of items listed - can be as long as needed!!*/
  background-color: #ffefcc;
  
  margin: auto;
  text-align: center;
  align-items: center;

  min-width: 300px;
  min-height: 300px;
  max-width: 1000px;

  width: 50%;
  top: 50%;
  border-radius: 15px;

  padding-top: 20px;
  padding-bottom: 30px;
  padding-left: 20px;
  padding-right: 20px;
}

/* FOR THE AJAX PAGE */
#newentrycontainer2 {
  /*NOTE TO SELF: no max. height bc there's also*/
  /*no max. number of items listed - can be as long as needed!!*/
  background-color: #ffe3cc;

  margin: auto;
  text-align: center;
  align-items: center;

  min-width: 300px;
  min-height: 300px;
  max-width: 1000px;

  width: 50%;
  top: 50%;
  border-radius: 15px;

  padding-top: 20px;
  padding-bottom: 30px;
  padding-left: 20px;
  padding-right: 20px;
}

#label {
  color:#d6a95a;
}

/* input field styling */

input {
  width: 50%;
}

#country, #username, #message {
  font-size: 12px;
  font-style: italic;
}

input[type=text], select {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

input[type=submit] {
  width: 100%;
  background-color: #d6a95a;
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

input[type=submit]:hover {
  background-color: #bc9146;
}

/* submit button */
#submit {
  border-radius: 5cm;
  padding: 10px;
  margin-top: 10px;
  font-size: 15px;
  border: none;
  background-color: #d3a452;
}

#submit:hover {
  background-color:#986b19;
  transition: all 0.7s ease-in-out;
}

